--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,16 @@
-.hidden {
-  opacity: 0;
+body {
+  margin: 0;
+}
+// the dots
+.st1 {
+  // opacity: 0;
+}
+button {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
 }
 svg {
-  width: 1000px;
+  width: 80vw;
   height: auto;
 }
